--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <link rel="stylesheet" href="extra.css">
 </head>
 <body>
-  <h1 class="h1"><strong>WELCOME TO CALCULATE ME!!</strong></h1>
+  <h1 class="h1"><strong>QUICK MATH</strong></h1>
   <div class="container flex flex-col item-center mx-auto m-w-20">
     <div class="row">
       <input type="text" class="input" >
     </div>
+   <div class="container2">
     <div class="row">
       <button class="button">Clr</button>
       <button class="button">%</button>
@@ -41,6 +42,7 @@
       <button class="button">=</button>
       <button class="button">-</button>
     </div>
+  </div> 
   </div>
   <script src="calci.js">
   </script>
